[package]
name    = "stm32f0-discovery"
version = "0.1.0"
authors = ["Hanno Braun <hanno@braun-robotics.com>"]

[dependencies]
cortex-m    = "*"
cortex-m-rt = "*"
stm32f0     = { version = "*", features = ["stm32f0x2", "rt"] }

[profile.release]
codegen-units = 1
lto           = true
opt-level     = 3
